Add POST callback function to calculator file and placeholder in html

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
   <body>
     <h1>The world's best calculator</h1>
-    <form action="index.html" method="post">
-      <input type="text" name="number1" value="e.g 23">
-      <input type="text" name="number2" value="e.g 67">
+    <form action="/" method="post">
+      <input type="text" name="number1" placeholder="e.g 23">
+      <input type="text" name="number2" placeholder="e.g 67">
       <button type="submit" name="submit">Calculate</button>
     </form>
   </body>
